--- a/api/keyboardlist-api/templates/navbar.html
+++ b/api/keyboardlist-api/templates/navbar.html
@@ -1,5 +1,6 @@
 <div class="navbar">
     <nav class="uk-navbar uk-navbar-attached">
+        <span class="brand">keyboardlist</span>
         <ul class="uk-navbar-nav">
         </ul>
     </nav>
