list showing up

--- a/api/keyboardlist-api/templates/index.html
+++ b/api/keyboardlist-api/templates/index.html
@@ -10,7 +10,9 @@
         <div class="main-wrapper">
         {% include 'navbar.html' %}
             <div class="content-wrapper">
-                <div class="content" ng-view></div>
+                <keyboard-list></keyboard-list>
+                <div class="content" ng-view>
+                </div>
             </div>
         </div>
     </body>
