--- a/api/keyboardlist-api/templates/javascript.html
+++ b/api/keyboardlist-api/templates/javascript.html
@@ -1,3 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/js/uikit.min.js"></script>
-<script type="text/javascript" src"/dist/lib/angular/angular.min.js"></script>
+<script type="text/javascript" src="/dist/lib/uikit/dist/js/uikit.min.js"></script>
+<script type="text/javascript" src="/dist/lib/angular/angular.min.js"></script>
+<script type="text/javascript" src="/dist/lib/angular-route/angular-route.min.js"></script>
+<script type="text/javascript" src="/dist/main.js"></script>
