--- a/api/keyboardlist-api/templates/navbar.html
+++ b/api/keyboardlist-api/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="navbar main-navbar">
     <nav class="uk-navbar uk-navbar-attached">
         <span class="brand">keyboardlist</span>
         <ul class="uk-navbar-nav">
