--- a/api/keyboardlist-api/templates/stylesheets.html
+++ b/api/keyboardlist-api/templates/stylesheets.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/css/uikit.min.css" />
+<link rel="stylesheet" href="/dist/main.css" />
