sorting, filter my manufacture and logging

--- a/api/keyboardlist-api/templates/navbar.html
+++ b/api/keyboardlist-api/templates/navbar.html
@@ -1,6 +1,8 @@
 <div class="navbar main-navbar">
     <nav class="uk-navbar uk-navbar-attached">
-        <span class="brand">keyboardlist</span>
+        <span class="brand">
+            <i class="uk-icon-medium uk-icon-keyboard-o"></i>
+        </span>
         <ul class="uk-navbar-nav">
         </ul>
     </nav>
