--- a/api/keyboardlist-ui/app/less/main.less
+++ b/api/keyboardlist-ui/app/less/main.less
@@ -4,6 +4,7 @@
 @color2: #a7a7a7;
 @color3: #d7dbde;
 @color4: #465d6b;
+@color5: #ede9d8;
 
 body {
 }
@@ -16,6 +17,7 @@ body {
 }
 
 .content-wrapper {
+  background-color: #ffffff;
   padding: 40px;
 }
 
