--- a/api/keyboardlist-ui/app/partials/keyboards/keyboard-list.html
+++ b/api/keyboardlist-ui/app/partials/keyboards/keyboard-list.html
@@ -8,7 +8,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="keyboard in vm.keyboards">
+        <tr ng-repeat="keyboard in vm.keyboards.results">
             <td><a href="#" ng-bind="keyboard.model"></a></td>
             <td ng-bind="keyboard.switch_type"></td>
             <td ng-bind="keyboard.size"></td>
